force-app/main/default/objects/Project__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <label>Account Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mark Khabosha</fullName>
                <default>true</default>
                <label>Mark Khabosha</label>
            </value>
            <value>
                <fullName>Don Yang</fullName>
                <isActive>false</isActive>
                <label>Don Yang</label>
            </value>
            <value>
                <fullName>Olsen Antos</fullName>
                <isActive>false</isActive>
                <label>Olsen Antos</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>