force-app/main/default/objects/Project__c/fields/Business_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Business_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Analyst</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Business Analyst)</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>