force-app/main/default/objects/Project__c/fields/Developer1__c.field-meta.xml
<CustomField>
    <fullName>Developer1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Developer1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Developer1)</relationshipLabel>
    <relationshipName>Developer1</relationshipName>
    <type>Lookup</type>
</CustomField>