force-app/main/default/objects/Project__c/fields/Developer2__c.field-meta.xml
<CustomField>
    <fullName>Developer2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Developer2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Developer2)</relationshipLabel>
    <relationshipName>Developer2</relationshipName>
    <type>Lookup</type>
</CustomField>