force-app/main/default/objects/Project__c/fields/Last_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Status__c</fullName>
    <label>Last Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>