force-app/main/default/objects/Project__c/fields/Monthly_Support_Limit_hours__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Support_Limit_hours__c</fullName>
    <label>Monthly Support Limit (hours)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>