force-app/main/default/objects/Project__c/fields/QA_Tester__c.field-meta.xml
<CustomField>
    <fullName>QA_Tester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA Tester</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (QA Tester)</relationshipLabel>
    <relationshipName>QA_Tester</relationshipName>
    <type>Lookup</type>
</CustomField>