force-app/main/default/objects/Project__c/fields/Weekly_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weekly Meeting</label>
    <type>Checkbox</type>
</CustomField>